# graphicx

./: CMakeLists.txt  LICENSE.txt  README.md  install_dep_linux.sh
.github/workflows/: cmake-multi-platform.yml
graphicx/: CMakeLists.txt  graphicx.cpp  graphicx.h  quad_example.h  triangle_example.h
gx/: BUILD.md  CMakeLists.txt  Doxyfile  gx.cpp
gx/.doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_59abd49875316e4155a79864a290b9ca.html  dir_6ce42f94086d85042678791e3938dcb2.html  dir_6ce42f94086d85042678791e3938dcb2.js  dir_7a545efc4a5e89e088865b90501144cc.html  dir_7a545efc4a5e89e088865b90501144cc.js  dir_98ed8c9d31ea74e915031ecd8c9a6bc9.html  dir_a279ed5c4175293b5b2f0cc1c8e2c220.html  dir_a279ed5c4175293b5b2f0cc1c8e2c220.js  dir_af77128a919decbb414ecf654c489d8b.html  dir_af77128a919decbb414ecf654c489d8b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs.js  globals_defs_a.html  globals_defs_g.html  globals_defs_k.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func.js  globals_func_e.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  globals_func_l.html  (+122 more)
gx/.doxygen/html/d1/db5/: struct_g_x_shader_compilation_result-members.html
gx/.doxygen/html/d2/dc6/: struct_g_x_application.html  struct_g_x_application.js
gx/.doxygen/html/d3/dd8/: gx_8cpp.html  gx_8cpp.js
gx/.doxygen/html/d4/d01/: struct_g_x_window.html  struct_g_x_window.js
gx/.doxygen/html/d4/d79/: _basics.html
gx/.doxygen/html/d4/d90/: structglad_g_lversion_struct-members.html
gx/.doxygen/html/d4/da9/: glad_8h.js
gx/.doxygen/html/d5/d36/: struct_g_x_program_compilation_result.html  struct_g_x_program_compilation_result.js
gx/.doxygen/html/d6/d8d/: union_g_x_resource_union-members.html
gx/.doxygen/html/d7/d3a/: khrplatform_8h.html  khrplatform_8h_source.html
gx/.doxygen/html/d7/d7d/: struct_g_x_object.html  struct_g_x_object.js
gx/.doxygen/html/d7/dfe/: struct_g_x_program_compilation_result-members.html
gx/.doxygen/html/d8/d1a/: union_g_x_resource_union.html  union_g_x_resource_union.js
gx/.doxygen/html/d8/d82/: struct_g_x_window-members.html
gx/.doxygen/html/da/db1/: struct_g_x_application-members.html
gx/.doxygen/html/db/dc0/: structglad_g_lversion_struct.html  structglad_g_lversion_struct.js
gx/.doxygen/html/dc/d6c/: struct_g_x_dynamic_pointer_array.html  struct_g_x_dynamic_pointer_array.js
gx/.doxygen/html/dc/df0/: struct_g_x_resource-members.html
gx/.doxygen/html/de/d07/: gx_8h.html  gx_8h.js  gx_8h_source.html
gx/.doxygen/html/de/d21/: glad_8c.html  glad_8c.js
gx/.doxygen/html/df/d47/: struct_g_x_dynamic_pointer_array-members.html
gx/.doxygen/html/df/d81/: struct_g_x_object-members.html
gx/.doxygen/html/df/dd1/: struct_g_x_shader_compilation_result.html  struct_g_x_shader_compilation_result.js
gx/.doxygen/html/df/de8/: struct_g_x_resource.html  struct_g_x_resource.js
gx/.doxygen/html/search/: all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_d.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  (+35 more)
gx/.doxygen/latex/: annotated.tex  dir_59abd49875316e4155a79864a290b9ca.tex  dir_6ce42f94086d85042678791e3938dcb2.tex  dir_7a545efc4a5e89e088865b90501144cc.tex  dir_98ed8c9d31ea74e915031ecd8c9a6bc9.tex  dir_a279ed5c4175293b5b2f0cc1c8e2c220.tex  dir_af77128a919decbb414ecf654c489d8b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  index.tex  refman.tex
gx/.doxygen/latex/d2/dc6/: struct_g_x_application.tex
gx/.doxygen/latex/d3/dd8/: gx_8cpp.tex
gx/.doxygen/latex/d4/d01/: struct_g_x_window.tex
gx/.doxygen/latex/d4/d79/: _basics.tex
gx/.doxygen/latex/d4/da9/: glad_8h_source.tex
gx/.doxygen/latex/d5/d36/: struct_g_x_program_compilation_result.tex
gx/.doxygen/latex/d7/d3a/: khrplatform_8h.tex  khrplatform_8h_source.tex
gx/.doxygen/latex/d7/d7d/: struct_g_x_object.tex
gx/.doxygen/latex/d8/d1a/: union_g_x_resource_union.tex
gx/.doxygen/latex/db/dc0/: structglad_g_lversion_struct.tex
gx/.doxygen/latex/dc/d6c/: struct_g_x_dynamic_pointer_array.tex
gx/.doxygen/latex/de/d07/: gx_8h.tex  gx_8h_source.tex
gx/.doxygen/latex/de/d21/: glad_8c.tex
gx/.doxygen/latex/df/dd1/: struct_g_x_shader_compilation_result.tex
gx/.doxygen/latex/df/de8/: struct_g_x_resource.tex
gx/glad/include/glad/: glad.h
gx/glad/src/: glad.c
gx/include/gx/: gx.h
